--- a/css/styles.css
+++ b/css/styles.css
@@ -1,38 +1,10 @@
-* { 
-    margin: 0; 
-    padding: 0; 
-    box-sizing: border-box; 
+.sensor-line {
+    border: 1px solid black;
 }
-body { 
-    font: 13px Helvetica, Arial; 
+.sensor-value {
+    border: 1px solid black;
+    text-align: center;
 }
-form { 
-    background: #000; 
-    padding: 3px; 
-    position: fixed; 
-    bottom: 0; 
-    width: 100%; 
-}
-form input {
-    border: 0; 
-    padding: 10px; 
-    width: 90%; 
-    margin-right: .5%; 
-}
-form button { 
-    width: 9%; 
-    background: rgb(130, 224, 255); 
-    border: none; 
-    padding: 10px; 
-}
-#registers_list { 
-    list-style-type: none; 
-    margin: 0; 
-    padding: 0; 
-}
-#registers_list li { 
-    padding: 5px 10px; 
-}
-#registers_list li:nth-child(odd) { 
-    background: #eee; 
+tr td, tr th {
+    text-align: center
 }
